trying to fix overflow problem

--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -37,3 +37,7 @@
 .books {
     height: 60%;
 }
+
+.component-list {
+    width: 40%;
+}
